--- a/CoolestAPI/appsettings.json
+++ b/CoolestAPI/appsettings.json
@@ -1,3 +1,11 @@
 {
-
+  "http_ports": "6262",
+  "https_ports": "7045",
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*"
 }
